@@ -272,9 +272,10 @@ int
 SetPictureFilter (PicturePtr pPicture, char *name, int len, xFixed *params, int nparams)
 {
     ScreenPtr		pScreen = pPicture->pDrawable->pScreen;
+    PictureScreenPtr	ps = GetPictureScreen(pScreen);
     PictFilterPtr	pFilter = PictureFindFilter (pScreen, name, len);
     xFixed		*new_params;
-    int			i;
+    int			i, result;
 
     if (!pFilter)
 	return BadName;
@@ -298,6 +299,9 @@ SetPictureFilter (PicturePtr pPicture, char *name, int len, xFixed *params, int 
     for (i = 0; i < nparams; i++)
 	pPicture->filter_params[i] = params[i];
     pPicture->filter = pFilter->id;
-    pPicture->serialNumber |= GC_CHANGE_SERIAL_BIT;
+
+    result = (*ps->ChangePictureFilter) (pPicture, pPicture->filter,
+					 params, nparams);
+    return result;
     return Success;
 }
